[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "happyfeat"
version = "0.3.0"
authors = [
  { name="Inria NERV", email="adesbois@inria.fr" },
]
description = "Package for HappyFeat"
readme = "README.md"
requires-python = "==3.12.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: Microsoft :: Windows",
	"Operating System :: POSIX :: Linux",
]
dependencies = [
"shutils>=0.1.0",
"mne==1.9.0",
"numpy==1.26.4",
"pandas==2.2.1",
"PySide6==6.8.1",
"statsmodels>=0.13.1",
"scipy>=1.7.1",
"spectrum>=0.8.0",
"matplotlib==3.8.4",
"ruamel.yaml==0.18.6",
"plotly"==5.24.1,
]

[tool.hatch.build.targets.wheel]
include = ["happyfeat", "happyfeat/lib"]
exclude = ["happyfeat/config.json"]


[project.urls]
"Homepage" = "https://github.com/Inria-NERV/happyFeat"

[project.gui-scripts]
happyfeat = "happyfeat.happyfeat_welcome:main"